--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,7 +29,8 @@ jobs:
         pip install pytest maturin
     - name: Install package
       run: |
-        maturin develop
+        maturin build
+        pip install target/wheels/*.whl
     - name: Test with pytest
       run: |
         pytest -v
